--- a/style.css
+++ b/style.css
@@ -79,6 +79,30 @@ body {
     text-align: center;
     font-size: 4rem;
     padding-top: 25rem;
+}
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 5.2rem 2rem;
+    width: 80%;
+    margin: 0 auto;
+    margin-top: -6rem;
     
-
+}
+.column {
+    flex: 32%;
+    
+    padding: 5.2rem 2rem;
+    margin: 0 auto;
+}
+.column img {
+    height: 100%;
+}
+.caption {
+    background-color: rgb(58, 58, 58);
+    color: #fff;
+    width: 100%;
+    padding: 2rem;
+    text-align: center;
+    margin-top: -1rem;
 }
