--- a/style.css
+++ b/style.css
@@ -13,11 +13,10 @@
 }
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 body {
-    
     font-family: 'Poppins', sans-serif;
-    
     font-size: 1.8rem;   
 }
 
@@ -64,7 +63,7 @@ body {
   margin: 0 auto; 
 }
 .heading__1 {
-    margin-top: -5rem;
+    margin-top: 5rem;
     font-size: 5.6rem;
     letter-spacing: .5rem;
 }
@@ -72,14 +71,14 @@ body {
     color: #d3003f;
     font-family: 'Metal', cursive;
     font-weight: 100;
-    font-size: 3.3rem; 
+    font-size: 3rem; 
     margin-top: -2rem;
 }
 #projects {
     background-color: #31436b;
     margin-top: -20rem;
     text-align: center;
-    padding-bottom: 12rem;
+    padding-bottom: 15rem;
 }
 .heading-3 {
     color: #fff;
@@ -90,25 +89,28 @@ body {
     text-underline-offset: 1.2rem;
 
 }
+.heading-5 {
+    padding-top: 15rem;
+}
 
 .row {
     display: flex;
     flex-wrap: wrap;
     padding: 5.2rem 2rem;
-    width: 75%;
+    width: 80%;
     margin: 0 auto;
     margin-top: -3rem;
     
 }
 .column {
     flex: 32%;
-    padding: 5.2rem 2rem;
+    padding: 3rem 2rem;
     margin: 0 auto;
     transition: all .3s;
     
 }
 .column img {
-    height: 100%;
+    height: 85%;
     box-shadow: 1rem 2rem 3rem #000;
     
 }
@@ -132,14 +134,21 @@ body {
     padding: 1.5rem 2.5rem;
     border-radius: 3px;
     display: inline-block;
-    margin: 6rem;
+    margin-bottom: 12rem;
+    transition: all .3s;
 
 }
+.project-tile a:hover {
+    background-color: #d3003f;
+    transform: scaleX(1.1);
+}
+
 #contact-section {
     background-color: #1a252b;
-    height: 90vh;
+    height: 100%;
     clip-path: polygon(0 19%, 100% 0, 100% 100%, 0 100%);
-    margin-top: -15rem; 
+    margin-top: -27rem; 
+
 } 
 
 #contact-section ul {
@@ -155,17 +164,19 @@ body {
 #contact-section ul li a {
     text-decoration: none;
     color: #fff;
-    font-size: 2.5rem;
-    transition: all .3s;
-
-    
+    font-size: 2.3rem;
+    transition: all .3s; 
 }
 #contact-section ul li a:hover {
     transform: translateY(1rem);
-
 }
 
-hr {
-    border: 2px solid #d3003f;
-
+.footer-text {
+    color: #fff;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 28rem;
+    padding: 2rem 12rem;
+    border-top: 4px solid #d3003f;
 }
